# MediaVideo

./: settings.gradle.kts
Video/: build.gradle.kts
Video/src/main/: AndroidManifest.xml
Video/src/main/cpp/: CMakeLists.txt  video.cpp
Video/src/main/java/com/example/video/: NativeLib.java
Video/src/main/java/com/example/video/activity/: CameraVideoActivity.java
Video/src/main/java/com/example/video/controller/: CameraController.java
Video/src/main/java/com/example/video/utils/: ScreenUtils.java
Video/src/main/res/layout/: activity_camera_video.xml
Video/src/main/res/values/: themes.xml
Video/src/main/res/values-night/: themes.xml
app/: build.gradle.kts
app/src/androidTest/java/com/example/mediavideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mediavideo/: MainActivity.java
audioOrVideoDemo/: build.gradle.kts
audioOrVideoDemo/src/main/cpp/: CMakeLists.txt  IDecoder.h  video.cpp
audioOrVideoDemo/src/main/cpp/include/libavutil/: ffversion.h
audioOrVideoDemo/src/main/cpp/opensl/: OpenSLAudioPlay.h
audioOrVideoDemo/src/main/java/com/example/video/audio/: AudioSLESNativeLib.java
audioOrVideoDemo/src/main/java/com/example/video/mediacodec/: aaa.java
audioOrVideoDemo/src/main/java/com/example/video/mediacodec/audio/: AACEncoder.java  AudioConfiguration.java  AudioProcessor.java
audioOrVideoDemo/src/main/java/com/example/video/mediacodec/base/: AudioMediaCodec.java  AudioUtils.java  BaseAudioCodec.java
fdkaac_audio/: build.gradle.kts
fdkaac_audio/src/androidTest/java/com/example/fdkaac_audio/: ExampleInstrumentedTest.java
fdkaac_audio/src/main/cpp/: CMakeLists.txt  common.h  fdkaac_audio.cpp
fdkaac_audio/src/main/cpp/decode/: AACDecoder.cpp  AACDecoder.h
fdkaac_audio/src/main/cpp/encode/: AACEncoder.cpp  AACEncoder.h
fdkaac_audio/src/main/java/com/example/fdkaac_audio/: FDKAACDecode.java  FDKAACEncode.java
fdkaac_audio/src/test/java/com/example/fdkaac_audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
video/src/main/cpp/: BaseDecoder.cpp  BaseDecoder.h  CMakeLists.txt  video.cpp
video/src/main/cpp/opensl/: AudioEngine.h  Audio_SLES_Native.cpp  OpenSLAudioPlay.cpp
video/src/main/java/com/example/video/: AudioTracker.java  NativeLib.java
video/src/main/java/com/example/video/audio/: AudioRecorder.java  AudioTracker.java
x264_video_encode/: build.gradle.kts
x264_video_encode/src/androidTest/java/com/example/x264_video_encode/: ExampleInstrumentedTest.java
x264_video_encode/src/main/cpp/: CMakeLists.txt  X264Encoder.cpp  X264Encoder.h  x264_video_encode.cpp
x264_video_encode/src/main/java/com/example/x264_video_encode/: NativeLib.java
x264_video_encode/src/test/java/com/example/x264_video_encode/: ExampleUnitTest.java
